swagger + test fix
